# lingua-ai

./: .env.example  .gitignore  Caddyfile.example  README.md  docker-compose.yml
apps/api/: .dockerignore  .gitignore  Dockerfile  README.md  app_config.py  article_processing.py  auth.py  database.py  init_db.py  main.py  models.py  pyproject.toml  question_generation.py  schemas.py  start.bat  system_settings.py
apps/api/routers/: articles.py  learning.py  system_settings.py  textbooks.py  users.py
apps/web/: .dockerignore  Dockerfile  nginx.conf  openapi-ts.config.ts  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.vue  main.ts  style.css
apps/web/src/api/client/: index.ts  sdk.gen.ts  types.gen.ts
apps/web/src/components/: AppConfirm.vue  AppToast.vue  ArticleFormModal.vue  ArticleKeyPointsDrawer.vue  TextbookFormModal.vue  UserFormModal.vue
apps/web/src/layouts/: AdminLayout.vue
apps/web/src/router/: index.ts
apps/web/src/services/: api.ts  auth.ts  notify.ts
apps/web/src/utils/: articleHighlights.ts
apps/web/src/views/: LoginView.vue  StudentHomeView.vue  StudentIntensiveListeningView.vue  StudentLearningView.vue  SystemSettingsView.vue  TextbookManagementView.vue  UserManagementView.vue
