[project]
name = "lingua-api"
version = "0.1.0"
description = "FastAPI service for Lingua AI"
requires-python = ">=3.9"
dependencies = [
    "bcrypt<4.1",
    "fastapi>=0.128.8",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "sqlalchemy>=2.0,<3.0",
    "uuid6>=2025.0.1",
    "uvicorn[standard]>=0.39.0",
]